# open-rmbt-udp-ping

./: README.md  test_server.py
.github/workflows/: build.yml
client/: udp-ping-client.py  udp-ping-token.py
clientPython/: __main__.py  client.py  packet.py  receiver.py  stats.py  udp-ping.py
clientRust/: Cargo.toml
clientRust/src/: main.rs  packet.rs  stats.rs
makeToken/: makeToken.py
rust-server/: Cargo.toml  build.rs
rust-server-xdp/: Cargo.toml
rust-server-xdp/scripts/: setup.sh  sysctl.conf
rust-server-xdp/src/: main.rs
rust-server-xdp/xdp-prog/: Cargo.toml  build.rs
rust-server-xdp/xdp-prog/src/: xdp_kern.c
rust-server/src/: config.rs  events.rs  logger.rs  main-multithreaded-and-batch.rs  main.rs  packet.rs  server.rs
server/: udp-ping-server.py
systemd/: open-rmbt-udp-ping.service
xdp-server/: Cargo.toml
xdp-server/src/: main.rs
