[package]
name = "udp_server"
# Placeholder only — the real version is derived from the git tag at build time
# (see build.rs); this Cargo.toml value is the fallback when git is unavailable.
version = "0.0.0"
edition = "2024"

[dependencies]
socket2 = "0.6"
hmac = "0.13"
sha2 = "0.11"
clap = "4"
hex = "0.4"
log = { version = "0.4", features = ["std"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4"
libc = "0.2"
